<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:scrollbars="vertical"
    tools:context="com.katherineplazas.sesion2g2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/purple"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eNombre"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ePass"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpassword"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eRpass"
            android:inputType="textPassword"/>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:id="@+id/eCorreo"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nacimiento"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/tFecha"
        android:onClick="LlamarFecha"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasatiempos"
        android:textSize="25sp"/>
    <CheckBox
        android:id="@+id/cNadar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nadar"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/cCine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cine"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/cCorrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correr"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@color/gray"
        android:id="@+id/bGuardar"
        android:onClick="clickboton"
        />


</LinearLayout>
